syntax = "proto2";
package ssmessage;
option go_package = "initialthree/protocol/ss/ssmessage";

message startAoi {
	optional int32  sceneIdx  = 1;
	optional string userID    = 2;	
}
